centered descriptive paragraph for projects. Fixed the resume link spacing.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -71,10 +71,12 @@ body {
 } 
 .descriptions{
     margin: auto;
-    width: 50%;
+    width: 100%;
     color: white;
+    text-align: center;
 
 }
+
 .hamburger-menu {
     position:absolute;
     top: .75rem;
@@ -180,10 +182,7 @@ body {
       flex-flow: wrap;
       gap: 8rem;
     }
-    ul:nth-child(1){
-      margin-left: 8rem;
-      
-    }
+    
 
     .navTop li {
       display: flex;
@@ -411,10 +410,7 @@ body {
 } 
 
 
- 
-
-
-  
+   
 
 .youdiv {
   
